# c-starter-kit

./: .clang-format  .editorconfig  .gitattributes  .gitignore  README.md  cstarter.sh
templates/c2x-starter/: CMakeLists.txt
templates/c2x-starter/include/: PROJECTNAME.h
templates/c2x-starter/src/: PROJECTNAME.c
templates/c99-starter/: CMakeLists.txt
templates/c99-starter/src/: PROJECTNAME.c
